objects/AwardedQualification__c.object
<CustomObject>
    <fields>
        <fullName>CV__c</fullName>
        <label>CV</label>
        <referenceTo>CurriculumVitae__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Awarded_Qualifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CertificateNumber__c</fullName>
        <label>Certificate Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateURL__c</fullName>
        <label>Certificate URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Certificates will have their own section on the CV</description>
        <label>Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayDateOption__c</fullName>
        <label>Display Date Option</label>
        <picklist>
            <picklistValues>
                <fullName>Month and Year</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Year Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave Blank</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DisplayFromDate__c</fullName>
        <formula>CASE(TEXT(DisplayDateOption__c), 
&quot;Month and Year&quot;, CASE(MONTH(  FromDate__c ), 
1, &quot;Jan&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
2, &quot;Feb&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
3, &quot;Mar&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
4, &quot;Apr&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
5, &quot;May&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
6, &quot;Jun&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
7, &quot;Jul&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
8, &quot;Aug&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
9, &quot;Sep&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
10, &quot;Oct&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
11, &quot;Nov&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c)), 
&quot;Dec&quot; + &apos; &apos; + TEXT(YEAR( FromDate__c))) , 
&quot;Year Only&quot;, TEXT(YEAR(FromDate__c)),  
&quot;Full Date&quot;, TEXT(FromDate__c),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display From Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayToDate__c</fullName>
        <formula>CASE(TEXT(DisplayDateOption__c), 
&quot;Month and Year&quot;, CASE(MONTH(  ToDate__c ), 
1, &quot;Jan&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
2, &quot;Feb&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
3, &quot;Mar&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
4, &quot;Apr&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
5, &quot;May&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
6, &quot;Jun&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
7, &quot;Jul&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
8, &quot;Aug&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
9, &quot;Sep&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
10, &quot;Oct&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
11, &quot;Nov&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c)), 
&quot;Dec&quot; + &apos; &apos; + TEXT(YEAR( ToDate__c))) , 
&quot;Year Only&quot;, TEXT(YEAR(ToDate__c)),  
&quot;Full Date&quot;, TEXT(ToDate__c),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display To Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <description>Either date course started or when a certification is valid from</description>
        <inlineHelpText>Either date course started or when a certification is valid from</inlineHelpText>
        <label>From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <referenceTo>Qualification__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Awarded_Qualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SortBy__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sort By</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <description>Either date course finished or the date, if any, when a certification expires.</description>
        <inlineHelpText>Either date course finished or the date, if any, when a certification expires.</inlineHelpText>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Awarded Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Qualification__c</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CertificateURL__c</columns>
        <columns>CertificateNumber__c</columns>
        <columns>DisplayDateOption__c</columns>
        <columns>Certification__c</columns>
        <columns>SortBy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AQ-{00000}</displayFormat>
        <label>Awarded Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awarded Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>